extends Node

@onready var screen_click = $ScreenExit
@onready var screen_exit = $ScreenClick

@onready var guide_click = $GuideClick
@onready var guide_exit = $GuideExit

@onready var text_sound = $TextSound

@onready var incorrect_sound = $IncorrectSound
@onready var correct_sound = $CorrectSound 

@onready var return_main = $ReturnMain
